syntax = 'proto3';

import "common.message.proto";
import "files.model.proto";

// Scope
message QueryFileUsageScopeRequest {
    QueryBuilder query_builder = 1;
    optional string search = 2;
    optional string model_name = 3;
    optional string purpose = 4;
    optional bool include_voided = 5;
    optional RequestContext context = 6;
}

message QueryFileUsageScopeResponse {
    repeated FileUsageScope data = 1;
    string metadata = 2; 
}

message CreateFileUsageScopeRequest {
    QueryBuilder query_builder = 1;
    string model_name = 2;
    string purpose = 3;
    optional string description = 4;
    optional RequestContext context = 5;

}
message UpdateFileUsageScopeRequest {
    QueryBuilder query_builder = 1;
    string id = 2;
    optional string model_name = 3;
    optional string purpose = 4;
    optional string description = 5;
    optional RequestContext context = 6;
}

message GetFileUsageScopeResponse {
    FileUsageScope data = 1;
    string metadata = 2; 
}

// Rule
message QueryFileUsageRuleRequest {
    QueryBuilder query_builder = 1;
    optional string search = 2;
    optional string scope_id = 3;
    optional string model_name = 4;
    optional string purpose = 5;
    optional bool include_voided = 6;
    optional RequestContext context = 7;
}

message QueryFileUsageRuleResponse {
    repeated FileUsageRule data = 1;
    string metadata = 2; 
}

message CreateFileUsageRuleRequest {
    QueryBuilder query_builder = 1;
    string scope_id = 2;
    int32 max_files = 3;
    optional RequestContext context = 4;
}
message UpdateFileUsageRuleRequest {
    QueryBuilder query_builder = 1;
    string id = 2;
    optional string scope_id = 3;
    optional int32 max_files = 4;
    optional RequestContext context = 5;
}

message GetFileUsageRuleResponse {
    FileUsageRule data = 1;
    string metadata = 2; 
}
